[package]
name = "zly"
version = "0.1.0"
authors = ["lvcq617 <lvcq617@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
zformdata={path="lib/zformdata"}
redis = "0.15.1"
rust-crypto = "^0.2"
uuid = { version = "0.8.1",features = ["serde", "v4"]}
