[package]
name = "zly"
version = "0.1.0"
authors = ["lvcq617 <lvcq617@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.0"
tower-service = "0.3.0"
tower-layer = "0.3.0"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
tokio-timer = "0.2.13"
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
zformdata={path="lib/zformdata"}
redis = "0.15.1"
rust-crypto = "^0.2"
uuid = { version = "0.8.1",features = ["serde", "v4"]}
serde_derive= "1.0.104"
serde = "1.0.104"
serde_json = "1.0.48"
postgres="0.17.1"
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
