[package]
name = "zly"
version = "0.1.0"
authors = ["lvcq617 <lvcq617@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.0"
mime = "0.3.16"
actix-web = "2"
actix-rt = "1"
actix-service = "1.0.5"
actix-session="0.3.0"
actix-redis = "0.8.1"
actix-cors = "0.2.0"
actix-multipart = "0.2.0"
env_logger = "0.7.1"
tokio = { version = "0.2", features = ["full"] }
tokio-timer = "0.2.13"
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
redis = "0.15.1"
sha2 ="0.8.1"
rust-crypto = "^0.2"
uuid = { version = "0.8.1",features = ["serde", "v4"]}
serde_derive= "1.0.104"
serde = "1.0.104"
serde_json = "1.0.48"
postgres="0.17.1"
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.7.3"
