[package]
name = "zformdata"
version = "0.1.0"
authors = ["lvcq617 <lvcq617@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
mime= '0.3.16'
buf-read-ext = "0.3"
httparse = "1.3"
chrono = { version = "0.4", features = ["serde"] }